--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,5 +4,10 @@
     <PropertyGroup>
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
+  
+    <ItemGroup>
+      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.4" />
+      <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.54" />
+    </ItemGroup>
 
 </Project>
