--- a/source/Fasciculus.Screeps.Bot/package.json
+++ b/source/Fasciculus.Screeps.Bot/package.json
@@ -1,23 +1,28 @@
 {
-  "author": "",
+  "author": "rhjoerg",
   "dependencies": {
-    "@types/screeps": "^3.3.7",
-    "lodash": "^4.17.21"
+    "@types/screeps": "^3.3.7"
   },
-  "description": "My bot for Screeps",
+  "description": "Fasciculus Bot",
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "@types/node": "^20.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
   },
   "keywords": [],
-  "license": "ISC",
+  "license": "MIT",
   "main": "app.js",
-  "name": "fasciculusscreepsbot",
+  "name": "fasciculus",
   "repository": {
     "type": "git",
     "url": "git://github.com/fasciculus/fasciculus.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
-  "version": "1.0.0"
+  "version": "0.1.100"
 }
