--- a/source/Fasciculus.Screeps.Bot/package.json
+++ b/source/Fasciculus.Screeps.Bot/package.json
@@ -6,7 +6,7 @@
   "description": "Fasciculus Bot",
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "@types/lodash": "^3.10.1",
+    "@types/lodash": "3.10.1",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
