--- a/source/Fasciculus.Experiments.Build/Fasciculus.Experiments.Build.csproj
+++ b/source/Fasciculus.Experiments.Build/Fasciculus.Experiments.Build.csproj
@@ -2,10 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="Config.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
   <Target Name="CreateProfilerSessionKey" BeforeTargets="Build">
     <PropertyGroup>
@@ -17,5 +23,39 @@
     <MakeDir Directories="ts" ContinueOnError="true" />
     <WriteLinesToFile File="ts/ProfilerSession.ts" Overwrite="true" Lines="$(ProfilerSessionCode)" />
   </Target>
+
+  <Target Name="CreateConfig" BeforeTargets="Build">
+    <MakeDir Directories="ts" ContinueOnError="true" />
+    <CreateConfig />
+  </Target>
+
+  <UsingTask TaskName="CreateConfig" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.Core.dll">
+    <ParameterGroup />
+    <Task>
+      <Reference Include="System.Xml"/>
+      <Using Namespace="System"/>
+      <Using Namespace="System.Collections.Generic"/>
+      <Using Namespace="System.IO"/>
+      <Using Namespace="System.Xml"/>
+      <Code Type="Fragment" Language="cs">
+        <![CDATA[
+XmlDocument doc = new XmlDocument();
+doc.Load("Config.xml");
+XmlNodeList adds = doc.GetElementsByTagName("Add");
+List<string> lines = new List<string>();
+string profilerSession = Guid.NewGuid().ToString("N");
+lines.Add("export const PROFILER_SESSION = \"" + profilerSession + "\";");
+foreach (var add in adds)
+{
+  XmlElement element = (XmlElement)add;
+  string key = element.GetAttribute("key");
+  string value = element.InnerText;
+  lines.Add("export const " + key + " = " + value + ";");
+}
+File.WriteAllLines("ts/Config.ts", lines);
+        ]]>
+      </Code>
+    </Task>
+  </UsingTask>
 
 </Project>
