--- a/source/Fasciculus.Screeps.Bot/tsconfig.json
+++ b/source/Fasciculus.Screeps.Bot/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "ES2016",
-    "module": "NodeNext",
+    "module": "NodeNext", // "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES6",
+    "lib": [ "ES6" ],
     "sourceMap": true,
     "outDir": "js",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "noImplicitReturns": true,
     "skipLibCheck": true
   },
   "include": ["ts"]
