--- a/source/Fasciculus.Screeps.Bot/package.json
+++ b/source/Fasciculus.Screeps.Bot/package.json
@@ -1,15 +1,15 @@
 {
   "author": "rhjoerg",
   "dependencies": {
-    "@types/screeps": "^3.3.7"
+    "@types/screeps": "3.3.7"
   },
   "description": "Fasciculus Bot",
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3"
+    "@types/node": "20.11.16",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "eslint": "8.56.0",
+    "typescript": "5.3.3"
   },
   "keywords": [],
   "license": "MIT",
