--- a/source/Fasciculus.TypeScript.ES5/package.json
+++ b/source/Fasciculus.TypeScript.ES5/package.json
@@ -1,15 +1,20 @@
 {
-    "author": { "name": "rhjoerg" },
-    "dependencies": {},
-    "description": "TypeScript ES5 extensions",
-    "devDependencies": {
-    "grunt" : "1.6.1"
+  "author": { "name": "rhjoerg" },
+  "dependencies": {},
+  "description": "TypeScript ES5 extensions",
+  "devDependencies": {
+    "grunt": "1.6.1",
+    "grunt-contrib-concat": "2.1.0"
   },
-    "license": "MIT",
-    "name": "fasciculus-es5-extensions",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/fasciculus/fasciculus.git"
-    },
-    "version": "0.1.1"
+  "license": "MIT",
+  "main": "",
+  "name": "fasciculus-es5-extensions",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/fasciculus/fasciculus.git"
+  },
+  "scripts": {
+    "build": "npx grunt"
+  },
+  "version": "0.1.1"
 }
