--- a/source/fasciculus-es5-types/package.json
+++ b/source/fasciculus-es5-types/package.json
@@ -6,15 +6,12 @@
   "dependencies": {},
   "description": "javascript es5 extensions",
   "devDependencies": {
-    "fasciculus-package": "file://../../npm_modules/fasciculus-package",
+    "fasciculus-package": "file:../../npm_modules/fasciculus-package",
     "grunt": "1.6.1",
     "grunt-contrib-copy": "1.0.0"
   },
   "license": "MIT",
   "name": "@types/fasciculus-es5",
-  "peerDependencies": {
-    "grunt": "1.6.1"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/fasciculus/fasciculus.git"
