--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,7 +7,8 @@
     <FasciculusRootDirectory>$(MSBuildThisFileDirectory)</FasciculusRootDirectory>
     <FasciculusRepositoryDirectory>$([System.IO.Path]::Combine($(FasciculusRootDirectory), '.repository'))</FasciculusRepositoryDirectory>
     <FasciculusPackagesDirectory>$([System.IO.Path]::Combine($(FasciculusRepositoryDirectory), 'packages'))</FasciculusPackagesDirectory>
-    <FasciculusInstalledPackagesDirectory>$([System.IO.Path]::Combine($(FasciculusPackagesDirectory), 'installed'))</FasciculusInstalledPackagesDirectory>
+    <FasciculusModulesDirectory>$([System.IO.Path]::Combine($(FasciculusRepositoryDirectory), 'node_modules'))</FasciculusModulesDirectory>
+   <FasciculusInstalledPackagesDirectory>$([System.IO.Path]::Combine($(FasciculusPackagesDirectory), 'installed'))</FasciculusInstalledPackagesDirectory>
   </PropertyGroup>
   
   <!-- Compiler Settings -->
