--- a/source/fasciculus-bot/tsconfig.concat.json
+++ b/source/fasciculus-bot/tsconfig.concat.json
@@ -1,9 +1,27 @@
 {
-  "extends": "tsconfig.json",
+  "compileOnSave": true,
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": true,
     "baseUrl": "build/",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "newLine": "crlf",
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
+    "removeComments": false,
     "outDir": "dist/",
-    "rootDir": "build/"
+    "rootDir": "build/",
+    "skipLibCheck": true,
+    "lib": [ "ES2015" ],
+    "sourceMap": false,
+    "strict": true,
+    "strictPropertyInitialization": true,
+    "target": "ES2015"
   },
   "include": [ "build/main.ts" ]
 }
