--- a/source/Fasciculus.Eve/Fasciculus.Eve.csproj
+++ b/source/Fasciculus.Eve/Fasciculus.Eve.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
   </ItemGroup>
 
