--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,5 +7,6 @@
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.4" />
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.54" />
+    <PackageVersion Include="YamlDotNet" Version="16.0.0" />
   </ItemGroup>
 </Project>
