--- a/source/Fasciculus.Eve/Fasciculus.Eve.csproj
+++ b/source/Fasciculus.Eve/Fasciculus.Eve.csproj
@@ -16,9 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources/names.dat">
-      <LogicalName>Names</LogicalName>
-    </EmbeddedResource>
+    <Folder Include="Resources\" />
   </ItemGroup>
   
 </Project>
