--- a/source/Fasciculus.Eve/Fasciculus.Eve.csproj
+++ b/source/Fasciculus.Eve/Fasciculus.Eve.csproj
@@ -9,23 +9,24 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Eve.Models/Fasciculus.Eve.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include = "Resources/Constellations.dat" >
-      <LogicalName >Sde.Constellations</LogicalName >
+    <EmbeddedResource Include="Resources/Constellations.dat">
+      <LogicalName>Sde.Constellations</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include = "Resources/Names.dat" >
-      <LogicalName >Sde.Names</LogicalName >
+    <EmbeddedResource Include="Resources/Names.dat">
+      <LogicalName>Sde.Names</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include = "Resources/Regions.dat" >
-      <LogicalName >Sde.Regions</LogicalName >
+    <EmbeddedResource Include="Resources/Regions.dat">
+      <LogicalName>Sde.Regions</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include = "Resources/SolarSystems.dat" >
-      <LogicalName >Sde.SolarSystems</LogicalName >
+    <EmbeddedResource Include="Resources/SolarSystems.dat">
+      <LogicalName>Sde.SolarSystems</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include = "Resources/Stargates.dat" >
-      <LogicalName >Sde.Stargates</LogicalName >
+    <EmbeddedResource Include="Resources/Stargates.dat">
+      <LogicalName>Sde.Stargates</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   
