--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,7 +14,9 @@
   <!-- Compiler Settings -->
 
   <PropertyGroup>
-    <LangVersion>11.0</LangVersion>
+    <LangVersion>12.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   
 </Project>
