--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,9 @@
   <ItemGroup>
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.7" />
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.10.4" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.72" />
+    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.72" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.5.2" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
     <PackageVersion Include="YamlDotNet" Version="16.0.0" />
