--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>Fasciculus.Eve</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
