--- a/source/Fasciculus.Testing/Fasciculus.Testing.csproj
+++ b/source/Fasciculus.Testing/Fasciculus.Testing.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Fasciculus</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" />
+  </ItemGroup>
+
 </Project>
