--- a/source/Fasciculus.Windows/Fasciculus.Windows.csproj
+++ b/source/Fasciculus.Windows/Fasciculus.Windows.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Win32.Registry" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+  </ItemGroup>
+
 </Project>
