--- a/source/Fasciculus.Steam/Fasciculus.Steam.csproj
+++ b/source/Fasciculus.Steam/Fasciculus.Steam.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Win32.Registry" />
+    <ProjectReference Include="../Fasciculus.Windows/Fasciculus.Windows.csproj" />
   </ItemGroup>
 
 </Project>
