--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Fasciculus</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PolySharp" />
+  </ItemGroup>
+
 </Project>
