--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
     <PackageVersion Include="MSTest.TestFramework" Version="3.6.0" />
     <PackageVersion Include="PolySharp" Version="1.14.1" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
+    <PackageVersion Include="System.Memory" Version="4.5.5" />
     <PackageVersion Include="YamlDotNet" Version="16.1.2" />
   </ItemGroup>
 </Project>
