--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="PolySharp" />
+    <PackageReference Include="System.Memory" />
   </ItemGroup>
 
 </Project>
