--- a/source/Fasciculus.Core.Tests/Fasciculus.Core.Tests.csproj
+++ b/source/Fasciculus.Core.Tests/Fasciculus.Core.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
