--- a/source/Fasciculus.Eve.Converter/Fasciculus.Eve.Converter.csproj
+++ b/source/Fasciculus.Eve.Converter/Fasciculus.Eve.Converter.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="../Fasciculus.Eve.Models/Fasciculus.Eve.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Operations\" />
+  </ItemGroup>
+
 </Project>
