--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources/EveUniverse.dat">
+    <EmbeddedResource Include="Resources/EveUniverse.dat.gz">
       <LogicalName>EveUniverse</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources/EveNavigation.dat.gz">
