--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,18 +5,19 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
-    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.11.4" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.90" />
-    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.90" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.11" />
+    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.12.6" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.93" />
+    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.93" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageVersion Include="Microsoft.UI.Xaml" Version="2.8.6" />
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
-    <PackageVersion Include="MSTest.TestAdapter" Version="3.6.0" />
-    <PackageVersion Include="MSTest.TestFramework" Version="3.6.0" />
+    <PackageVersion Include="MSTest.TestAdapter" Version="3.6.3" />
+    <PackageVersion Include="MSTest.TestFramework" Version="3.6.3" />
     <PackageVersion Include="PolySharp" Version="1.14.1" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
-    <PackageVersion Include="System.Memory" Version="4.5.5" />
-    <PackageVersion Include="YamlDotNet" Version="16.1.2" />
+    <PackageVersion Include="System.Memory" Version="4.6.0" />
+    <PackageVersion Include="YamlDotNet" Version="16.2.0" />
   </ItemGroup>
 </Project>
