preparations for Fasciculus.Eve.Trade

--- a/source/Fasciculus.Eve.Trade/Properties/launchSettings.json
+++ b/source/Fasciculus.Eve.Trade/Properties/launchSettings.json
@@ -6,7 +6,7 @@
     },
     "Jita": {
       "commandName": "Project",
-      "commandLineArgs": "Jita"
+      "commandLineArgs": "Jita 5000 10000000"
     }
   }
 }
