--- a/source/Fasciculus.Eve.Trade/Properties/launchSettings.json
+++ b/source/Fasciculus.Eve.Trade/Properties/launchSettings.json
@@ -7,6 +7,10 @@
     "Jita": {
       "commandName": "Project",
       "commandLineArgs": "Jita 5000 10000000"
+    },
+    "Dodixie": {
+      "commandName": "Project",
+      "commandLineArgs": "Dodixie 5000 10000000"
     }
   }
 }
