--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -30,6 +30,7 @@
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
     <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
+    <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="9.0.0" />
     <PackageVersion Include="YamlDotNet" Version="16.2.0" />
   </ItemGroup>
 </Project>
