--- a/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
+++ b/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
-    <RootNamespace>Fasciculus.Eve</RootNamespace>
+    <RootNamespace>Fasciculus.Eve.Assets</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
