--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,4 +20,15 @@
     <NoWarn>$(NoWarn),IDE0290,IDE0130</NoWarn>
   </PropertyGroup>
   
+  <!-- Package Settings -->
+
+  <PropertyGroup>
+    <VersionPrefix>0.1.1</VersionPrefix>
+    <VersionSuffix>dev.1</VersionSuffix>
+    <Version Condition="$(VersionSuffix) == ''">$(VersionPrefix)</Version>
+    <Version Condition="$(VersionSuffix) != ''">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Company>The Fasciculus Project</Company>
+    <Copyright>The Fasciculus Project</Copyright>
+  </PropertyGroup>
+  
 </Project>
