--- a/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
+++ b/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
@@ -8,6 +8,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 		<ApplicationTitle>Fasciculus.Eve.Assets</ApplicationTitle>
 		<ApplicationId>io.github.fasciculus.eve.assets</ApplicationId>
 		<ApplicationDisplayVersion>0.1.1</ApplicationDisplayVersion>
@@ -16,15 +17,11 @@
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 		<SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-	</PropertyGroup>
-
-  <PropertyGroup Condition="$(Configuration) =='Release'">
     <PublishReadyToRun>true</PublishReadyToRun>
-  </PropertyGroup>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 		<MauiFont Include="Resources\Fonts\*" />
