--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,6 +20,8 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="9.0.10" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.Maui.Core" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.Maui.Essentials" Version="9.0.10" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageVersion Include="Microsoft.UI.Xaml" Version="2.8.6" />
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
