--- a/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
+++ b/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
@@ -8,6 +8,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 		<ApplicationTitle>Fasciculus.Eve.Assets</ApplicationTitle>
 		<ApplicationId>io.github.fasciculus.eve.assets</ApplicationId>
