--- a/source/Fasciculus.Maui/Fasciculus.Maui.csproj
+++ b/source/Fasciculus.Maui/Fasciculus.Maui.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Maui.Essentials" />
   </ItemGroup>
 
