--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -10,14 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources/EveData.dat.gz">
-      <LogicalName>EveData</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources/EveUniverse.dat.gz">
-      <LogicalName>EveUniverse</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources/EveNavigation.dat.gz">
-      <LogicalName>EveNavigation</LogicalName>
+    <EmbeddedResource Include="Resources/SdeVersion">
+      <LogicalName>SdeVersion</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 
