--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="System.Memory" />
   </ItemGroup>
